style: update type annotations
