# src/controller/request.py
@@ -1,4 +1,3 @@
-from typing import List
 from fastapi import APIRouter, HTTPException, Response
 from bson import json_util
 from .utils import common_parameters
@@ -36,8 +35,8 @@ async def create_request(
 
 @router.get(
     "/",
-    response_description="List all requests",
-    response_model=List[RequestModel],
+    response_description="list all requests",
+    response_model=list[RequestModel],
 )
 async def list_requests(commons: Annotated[dict, Depends(common_parameters)]):
     documents = await commons["db"]["requests"].find().to_list(None)
@@ -45,27 +44,30 @@ async def list_requests(commons: Annotated[dict, Depends(common_parameters)]):
 
 
 @router.get(
-    "/{doc_id}",
+    "/{document_id}",
     response_description="Get a single request",
     response_model=RequestModel,
 )
 async def show_request(
-    doc_id: PyObjectId, commons: Annotated[dict, Depends(common_parameters)]
+    document_id: PyObjectId,
+    commons: Annotated[dict, Depends(common_parameters)],
 ):
-    document = await commons["db"]["requests"].find_one({"_id": doc_id})
+    document = await commons["db"]["requests"].find_one({"_id": document_id})
     if document is not None:
         return document
 
-    raise HTTPException(status_code=404, detail=f"request {doc_id} not found")
+    raise HTTPException(
+        status_code=404, detail=f"request {document_id} not found"
+    )
 
 
 @router.put(
-    "/{doc_id}",
+    "/{document_id}",
     response_description="Update a request",
     response_model=RequestModel,
 )
 async def update_request(
-    doc_id: PyObjectId,
+    document_id: PyObjectId,
     body: UpdateRequestModel,
     commons: Annotated[dict, Depends(common_parameters)],
 ):
@@ -73,34 +75,41 @@ async def update_request(
 
     if len(update_set) >= 1:
         update_result = await commons["db"]["requests"].update_one(
-            {"_id": doc_id}, {"$set": update_set}
+            {"_id": document_id}, {"$set": update_set}
         )
 
         if update_result.modified_count == 1:
             if (
                 updated_document := await commons["db"]["requests"].find_one(
-                    {"_id": doc_id}
+                    {"_id": document_id}
                 )
             ) is not None:
                 return updated_document
 
     if (
         existing_document := await commons["db"]["requests"].find_one(
-            {"_id": doc_id}
+            {"_id": document_id}
         )
     ) is not None:
         return existing_document
 
-    raise HTTPException(status_code=404, detail=f"request {doc_id} not found")
+    raise HTTPException(
+        status_code=404, detail=f"request {document_id} not found"
+    )
 
 
-@router.delete("/{doc_id}", response_description="Delete a request")
+@router.delete("/{document_id}", response_description="Delete a request")
 async def delete_request(
-    doc_id: PyObjectId, commons: Annotated[dict, Depends(common_parameters)]
+    document_id: PyObjectId,
+    commons: Annotated[dict, Depends(common_parameters)],
 ):
-    delete_result = await commons["db"]["requests"].delete_one({"_id": doc_id})
+    delete_result = await commons["db"]["requests"].delete_one(
+        {"_id": document_id}
+    )
 
     if delete_result.deleted_count == 1:
         return Response(status_code=status.HTTP_204_NO_CONTENT)
 
-    raise HTTPException(status_code=404, detail=f"request {doc_id} not found")
+    raise HTTPException(
+        status_code=404, detail=f"request {document_id} not found"
+    )
